fix dark mode issues

--- a/src/components/header/header-component.scss
+++ b/src/components/header/header-component.scss
@@ -3,7 +3,6 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  background-color: #fff;
   border-bottom: 1px solid transparent;
   ul {
     display: flex;
